--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -262,3 +262,24 @@ section{
     transform: translateY(-10px);
     box-shadow: 0px 15px 30px 0px rgb(0 0 0/70%);
 }
+
+.cta{
+    background: #0b0b13;
+    width: 100%;
+    padding: 150px 0;
+    text-align: center;
+    margin: 100px auto;
+}
+
+.cta  h4{
+    color: var(--text-color);
+    font-size: 1.6rem;
+    font-weight: 300;
+    margin-bottom: 30px;
+}
+.cta  h2{
+    color: var(--main-color);
+    font-size: 4rem;
+    font-weight: 200;
+    margin-bottom: 40px;
+}
