--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -283,3 +283,111 @@ section{
     font-weight: 200;
     margin-bottom: 40px;
 }
+
+.resume-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(450px, auto));
+    grid-gap: 3rem;
+    align-items: center;
+    margin-top: 4.4rem;
+
+}
+.box{
+    background: #0b0b13;
+    padding: 40px 30px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all .40s;
+
+}
+.box h6{
+    color: #3e4455;
+    font-size: 14px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.box h4{
+    color: var(--text-color);
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin-top: 20px;
+    margin-bottom: 13px;
+}
+.box p{
+    font-size: var(--p-font);
+    font-weight: 700;
+    margin-bottom: 1.2rem;
+    line-height: 1.8rem;
+    color: var(--2nd-main-color);
+}
+.box h5{
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--2nd-main-color);
+}
+.box:hover{
+    transform: translateY(-10px);
+    box-shadow: 0px 15px 30px 0px rgb(0 0 0/70%);
+}
+.contact-form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 4.2rem;
+
+}
+.contact-form form{
+    position: relative;
+    width: 550px;
+}
+form input,
+form textarea{
+    width: 100%;
+    padding:  20px ;
+    border: none;
+    outline: none;
+    background: #0b0b13;
+    color: var(--text-color);
+    margin-bottom: 0.5rem;
+    border-radius: 5px;
+}
+
+form input::placeholder,
+form textarea::placeholder{
+    color: var(--2nd-main-color);
+
+}
+textarea{
+    resize: none;
+    height: 200px;
+}
+form .send-btn{
+    background: var(--main-color);
+    color: var(--text-color);
+    box-shadow: 4px 4px var(--text-color);
+    padding: 0 25px;
+    line-height: 42px;
+    display: inline-block;
+    border-radius: 4px solid transparent;
+    font-size: 14px;   
+    font-weight: 400;
+    letter-spacing: 2px;
+    transition: ease all 0.35s;
+    cursor: pointer;
+
+}
+
+form .send-btn:hover{
+    background: var(--text-color);
+    color: var(--main-color);
+    box-shadow: 4px 4px var(--main-color);
+}
+
+.copyright{
+    text-align: center;
+    padding: 30px;
+    color: var(--2nd-main-color);
+    background: #0b0b13;
+    margin-top: 3rem;
+    line-height: 1.8rem;
+}
