--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -391,3 +391,69 @@ form .send-btn:hover{
     margin-top: 3rem;
     line-height: 1.8rem;
 }
+
+@media(max-width: 1430px){
+    header{
+        padding: 25px 3%;
+
+    }
+
+    section{
+        padding: 50px  3%;
+    }
+    :root{
+        --big-font: 3rem;
+        --h2-font:1.2rem;
+    }
+}
+@media(max-width: 1020px){
+    :root{
+        --big-font: 3rem;
+        --h2-font:1.2rem;
+        --p-font:0.9rem;
+    }
+    .home{
+        height: 70vh;
+    }
+
+}
+
+@media(max-width:830px){
+    header{
+        padding: 18px 3%;
+
+    }
+    #menu-icon{
+        display: block;
+    }
+    .navbar{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        background: #0b0b13;
+        box-shadow: 0px 15px 30px 0px rgb(0 0 0/70%);
+        text-align: left;
+        transition: 0.2s ease;
+
+    }
+    .navbar a{
+        display: block;
+        padding: 1rem;
+        border-left: 2px solid var(--main-color);
+        margin: 1rem;
+        display: block;
+    }
+    .navbar .active{
+        top: 100%;
+    }
+
+}
+@media (max-width:795px){
+    .home{
+        grid-template-columns: 1fr;
+        grid-gap: 2rem;
+    }
+}
