--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -455,5 +455,30 @@ form .send-btn:hover{
     .home{
         grid-template-columns: 1fr;
         grid-gap: 2rem;
+        text-align: center;
+        margin-top: 80px;
+        height: 100vh;
+
+    }
+    .home-text p{
+        max-width: 100%;
+    }
+    .Home-img img{
+        max-width: 100%;
+        width: 490px;
+        height: auto;
+    }
+    .about{
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+    .about-text h2{
+        max-width: 100%;
+    }
+    .about-text p{
+        max-width: 100%;
+    }
+    .about-img{
+        order: 2;
     }
 }
