--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -234,6 +234,7 @@ section{
     background: #0b0b13;
     padding: 50px 30px;
     border-radius: 5px;
+    min-height: 350px;
     cursor: pointer;
     transition: all .40s;
 }
