--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -287,7 +287,7 @@ section{
 
 .resume-content{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(450px, auto));
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 3rem;
     align-items: center;
     margin-top: 4.4rem;
@@ -408,6 +408,7 @@ form .send-btn:hover{
         --big-font: 3rem;
         --h2-font:1.2rem;
     }
+   
 }
 @media(max-width: 1020px){
     :root{
@@ -418,6 +419,7 @@ form .send-btn:hover{
     .home{
         height: 70vh;
     }
+    
 
 }
 
@@ -452,6 +454,15 @@ form .send-btn:hover{
     .navbar.active{
         top: 100%;
     }
+    .resume-content{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 3rem;
+        align-items: center;
+        margin-top: 4.4rem;
+    
+    }
+    
 
 }
 @media (max-width:795px){
